@@ -14,6 +14,8 @@ What's new
 Other features
 ~~~~~~~~~~~~~~
 
+ * Added more informative error message when ``|richtext`` filter is applied to a non-string value (mukesh5)
+
 
 Bug fixes
 ~~~~~~~~~
